# vb-se

./: .gitignore  README.md
.github/workflows/: publish.yaml
deployment/vb-se-app/: cloudflare-config.yaml  deployment.yaml  kustomization.yaml  marqo-deployment.yaml  marqo-pvc.yaml  marqo-service.yaml  refresh-job.yaml  sealed-regcred.json  tunnel-credentials-sealed.json  vb-se-config.yaml  youtube-api-key-sealed.json
opensearch/: channel_index.json  ingest_with_dates_pipeline.json  populate_channel.json  reindex_pipeline.json  video_index.json  video_index_v2.json  video_ingest.json  video_ingest_v2.json  video_search.json  video_search_v2.json
src/: Dockerfile  vb-se-deployment.yaml
src/db/: vb-se.db  vb_se.schema.sql
src/go_server/: Dockerfile  Taskfile.yaml  download_video.py  get_transcripts.py  go.mod  go.sum  main.go  result.json  tailwind.config.js  youtube.go  youtube_test.go
src/go_server/components/: index.templ  index_templ.go  video.templ  video_templ.go
src/go_server/database/: db.go  elastic.go  opensearch.go  sqlite.go
src/go_server/frontend/: index.go  search_videos.go
src/go_server/html/: index.html
src/go_server/models/: video.go
src/go_server/python_scripts/: get_transcripts.py  get_video.py
src/go_server/rest/: handler.go
src/go_server/static/: input.css  output.css
src/go_server/types/: youtube.go
src/go_server/youtube/: youtube.go  (+1 more)
src/migration/: opensearch-marqo.ipynb
src/python_elastic_testing/: tests.ipynb
src/refresh/: Dockerfile  main.py  requirements.txt
src/refresh_v2/: Dockerfile  main.py  pyproject.toml
(+12 files in other folders)
